@@ -23,6 +23,7 @@ Bugs fixed:
 - 1998030 SFCB core dumps during garbage collection
 - 2002392 Memory leaks in sfcb 1.2.5-35f
 - 2015639 SFCB SLP registration process crashes after 2nd registration
+- 2024019 SFCB can't handle large error messages
 
 Changes in 1.3.1
 ================
